fix: settings dark mode, editor initialie, code save

--- a/src/styles/EditorSettings.module.css
+++ b/src/styles/EditorSettings.module.css
@@ -1,14 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 .editorSettingsModal{
   width: 30vw;
   margin-left: 35vw;
 }
 
+.settingFormGroup{
+  margin-bottom: 5px;
+  padding-top: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .editorSettingsHeader{
   background: #2B3760;
   color: white;
   height: 10vh;
+  border: 0px;
 }
 
 .editorSettingsHeader button{
@@ -17,29 +25,36 @@
 
 
 .editorSettingsBody{
-  background: white;
+  background: #1c1c1c;
+  border: 0px;
+  padding: 7px 0px;
+  margin: 0;
 }
 
 .settingLabel{
-  font-family: 'Poppins', sans-serif;
-  color: black;
+  font-family: 'Montserrat', sans-serif;
+  color: #ddd;
   font-size: large;
   height: 3vh;
   margin-bottom: 1.5vh;
 }
 
 .settingDropdown{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   width: 100%;
   height: 5.5vh;
   margin-bottom: 2.8vh;
   padding-left: 1%;
-  border: 1.5px solid grey;
-  border-radius: 5px;
+  background: none;
+  color: #ddd;
 }
 
 .settingDropdown:hover, .settingDropdown:focus{
-  border: 2px solid #002244;
+  border: 1.5px solid white;
+}
+
+.optionsDropdown{
+  background: #1c1c1c;
 }
 
 
